Bug 276196 - Screen Saver -> "Screen unlocked" and "Screen saver exited" notification not working.
Summary: Screen Saver -> "Screen unlocked" and "Screen saver exited" notification not ...
Status: RESOLVED FIXED
Alias: None
Product: ksmserver
Classification: Unmaintained
Component: lockscreen (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-21 14:34 UTC by Pivert
Modified: 2015-02-06 07:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pivert 2011-06-21 14:34:51 UTC
Version:           4.6 (using KDE 4.6.2) 
OS:                Linux

System Settings -> Application and System Notification Configuration -> Event Source: Screen Saver -> Screen unlocked notification not working.

Same problem for "Screen saver exited".

I tried both with a command and with an audio notification.

The problem does not occur for the "Screen locked".

Reproducible: Always

Steps to Reproduce:
- Go to System Settings -> Application and System Notification Configuration -> Event Source: Screen Saver
- Add "Run command" to the "Screen unlocked" Title event.
- Lock the screen
- Unlock the screen
- Check if the command has been executed.


Actual Results:  
When unlocking the screen, the command or sound is not played.

Expected Results:  
The command and/or the sound is executed.

The test command is :
/usr/bin/qdbus org.kde.kopete /Kopete org.kde.Kopete.connectAll

The screen saver is the default black screen.
Comment 1 Martin Flöser 2015-02-06 07:22:06 UTC
Git commit 90395139dd51829900c2c6c2c526aab0bdf065ac by Martin Gräßlin.
Committed on 04/02/2015 at 14:51.
Pushed by graesslin into branch 'master'.

[screenlocker] Fix notifications

Start emitting notificiations again. Remove all notification events
which are no longer referenced in the code.
FIXED-IN: 5.3.0
REVIEW: 122425

M  +1    -0    ksmserver/screenlocker/CMakeLists.txt
M  +0    -412  ksmserver/screenlocker/kscreenlocker.notifyrc
M  +13   -3    ksmserver/screenlocker/ksldapp.cpp

http://commits.kde.org/plasma-workspace/90395139dd51829900c2c6c2c526aab0bdf065ac