[screenlocker] Fix notifications

Start emitting notificiations again. Remove all notification events
which are no longer referenced in the code.

BUG: 276196
FIXED-IN: 5.3.0
REVIEW: 122425